# tflite-mediapipe-face-detection

./: Cargo.toml
scripts/: download_data.sh
src/: main.rs
